Solved conflict in CSS between .script (used to properly layout super- and subscripts) and span.script (used for the script-type \mathscr and \mathcal fonts). Changed the latter to span.scriptfont, forcing an incompatible but unavoidable change in the CSS. Also, forced span.scriptfont to be shown as italic so it's properly displayed on Firefox.

--- a/src/css/math-extras.css
+++ b/src/css/math-extras.css
@@ -64,8 +64,9 @@ span.fraktur {
 span.blackboard {
 	font-family: Blackboard, msbm10, serif;
 }
-span.script {
+span.scriptfont {
 	font-family: "Monotype Corsiva", "Apple Chancery", "URW Chancery L", cursive;
+	font-style: italic;
 }
 
 /* Colors */
